automation/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dkef-api
  labels:
    app: dkef-api
spec:
  type: ClusterIP
  selector:
    app: dkef-api
  ports:
    - port: 80
      targetPort: 8080
