automation/k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dkef-api
  labels:
    app: dkef-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.dkef.dk
      secretName: dkef-api-tls
  rules:
    - host: api.dkef.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dkef-api
                port:
                  number: 80
